--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@
     background-size: cover;
 background-position: center;
 background-repeat: no-repeat;
-width: 1690px;
+width: 100%;
 height: 400px;
 margin-top: 2%;
 }
